# skill-reducer-code

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: blog-reproduction-design.md  configuration.md  usage.md
skillreducer/: __init__.py  cli.py  dataset.py  eval.py  io.py  llm.py  markdown.py  models.py  packager.py  reducer.py  reproduce.py  scan.py  stage1.py  stage2.py  tokenizer.py  util.py
tests/: test_core.py
